--- a/index.html
+++ b/index.html
@@ -3,60 +3,72 @@
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="Web Studio main page" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Web Studio</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
+        <a href="./index.html" class="logo-header"
+          ><span class="logo-header-web">Web</span>Studio</a
+        >
+        <ul class="header-list-link">
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="header-address-list">
+          <li><a href="mailto:info@devstudio.com" class="header-mail">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="header-phone">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="index-order-services">
+        <h1 class="index-order-services-title">
+          Effective Solutions<br />
+          for Your Business
+        </h1>
+        <button class="index-order-services-button">Order Service</button>
       </section>
 
-      <section>
-        <h2>Our Strength</h2>
-        <ul>
+      <section class="index-our-strength">
+        <h2 class="index-our-strength-title">WebStudio pluses</h2>
+        <ul class="index-our-strength-list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="index-our-strength-list-title">Strategy</h3>
+            <p class="index-our-strength-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="index-our-strength-list-title">Punctuality</h3>
+            <p class="index-our-strength-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="index-our-strength-list-title">Diligence</h3>
+            <p class="index-our-strength-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="index-our-strength-list-title">Technologies</h3>
+            <p class="index-our-strength-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -64,9 +76,9 @@
         </ul>
       </section>
 
-      <section>
+      <section class="index-what-we">
         <h2>What are we doing</h2>
-        <ul>
+        <ul class="index-what-we-list">
           <li>
             <img
               src="./images/computer_photo.jpg"
@@ -94,10 +106,10 @@
         </ul>
       </section>
 
-      <section>
+      <section class="index-our-team">
         <h2>Our Team</h2>
-        <ul>
-          <li>
+        <ul class="index-our-team-list">
+          <li class="index-our-team-list-el">
             <img
               src="./images/team_photo/Mark_Guerrero.jpg"
               alt="our Product Designer Mark Guerrero"
@@ -107,7 +119,7 @@
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
-          <li>
+          <li class="index-our-team-list-el">
             <img
               src="./images/team_photo/Tom_Ford.jpg"
               alt="our Frontend Developer Tom Ford"
@@ -117,7 +129,7 @@
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="index-our-team-list-el">
             <img
               src="./images/team_photo/Camila_Garcia.jpg"
               alt="our Marketing worker Camila Garcia"
@@ -127,7 +139,7 @@
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="index-our-team-list-el">
             <img
               src="./images/team_photo/Daniel_Wilson.jpg"
               alt="our UI Designer Daniel Wilson"
@@ -142,9 +154,12 @@
     </main>
 
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo-footer"
+        ><span class="logo-footer-web">Web</span>Studio</a
+      >
       <p>
-        Increase the flow of customers and sales for your business with digital
+        Increase the flow of customers and<br />sales for your business with
+        digital<br />
         marketing & growth solutions.
       </p>
     </footer>
