--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo-header"
-          ><span class="logo-header-web">Web</span>Studio</a
+        <a href="./index.html" class="logo-header logo-link"
+          >Web<span class="logo-header-studio">Studio</span></a
         >
         <ul class="header-list-link">
           <li><a href="./index.html">Studio</a></li>
