--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <header>
       <nav>
         <a href="./index.html" class="logo-header"
-          ><span class="logo-header-web">Web</span>Studio</a
+          >Web<span class="logo-header-studio">Studio</span></a
         >
         <ul class="header-list-link">
           <li><a href="./index.html">Studio</a></li>
