--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo-header logo-link"
+        <a href="./index.html" class="logo-header link"
           >Web<span class="logo-header-studio">Studio</span></a
         >
-        <ul class="header-list-link">
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="header-list-link list">
+          <li><a href="./index.html" class="link">Studio</a></li>
+          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+          <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul class="header-address-list">
-          <li><a href="mailto:info@devstudio.com" class="header-mail">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111" class="header-phone">+11 (000) 111-11-11</a></li>
+        <ul class="header-address-list list">
+          <li><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="header-phone link">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -44,7 +44,7 @@
 
       <section class="index-our-strength">
         <h2 class="index-our-strength-title">WebStudio pluses</h2>
-        <ul class="index-our-strength-list">
+        <ul class="list">
           <li>
             <h3 class="index-our-strength-list-title">Strategy</h3>
             <p class="index-our-strength-text">
@@ -78,7 +78,7 @@
 
       <section class="index-what-we">
         <h2>What are we doing</h2>
-        <ul class="index-what-we-list">
+        <ul class="list">
           <li>
             <img
               src="./images/computer_photo.jpg"
@@ -108,7 +108,7 @@
 
       <section class="index-our-team">
         <h2>Our Team</h2>
-        <ul class="index-our-team-list">
+        <ul class="list">
           <li class="index-our-team-list-el">
             <img
               src="./images/team_photo/Mark_Guerrero.jpg"
@@ -154,7 +154,7 @@
     </main>
 
     <footer>
-      <a href="./index.html" class="logo-footer"
+      <a href="./index.html" class="logo-footer link"
         ><span class="logo-footer-web">Web</span>Studio</a
       >
       <p>
