--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo-header"
+        <a href="./index.html" class="logo-header link"
           >Web<span class="logo-header-studio">Studio</span></a
         >
         <ul class="header-list-link">
@@ -26,17 +26,9 @@
         </ul>
       </nav>
       <address>
-        <ul class="header-address-list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="header-mail"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="header-phone"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
+        <ul class="header-address-list link">
+          <li><a href="mailto:info@devstudio.com" class="header-mail">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="header-phone">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -201,7 +193,7 @@
     </main>
 
     <footer>
-      <a href="./index.html" class="logo-footer"
+      <a href="./index.html" class="logo-footer link"
         ><span class="logo-footer-web">Web</span>Studio</a
       >
       <p>
