--- a/portfolio.html
+++ b/portfolio.html
@@ -19,16 +19,16 @@
         <a href="./index.html" class="logo-header link"
           >Web<span class="logo-header-studio">Studio</span></a
         >
-        <ul class="header-list-link">
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="header-list-link list">
+          <li><a href="./index.html" class="link">Studio</a></li>
+          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+          <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul class="header-address-list link">
-          <li><a href="mailto:info@devstudio.com" class="header-mail">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111" class="header-phone">+11 (000) 111-11-11</a></li>
+        <ul class="header-address-list list">
+          <li><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="header-phone link">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
