--- a/portfolio.html
+++ b/portfolio.html
@@ -16,19 +16,33 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo-header link"
-          >Web<span class="logo-header-studio">Studio</span></a
-        >
+        <a href="./index.html" class="logo-header link">
+          Web<span class="logo-header-studio">Studio</span>
+        </a>
         <ul class="header-list-link list">
-          <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
+          <li>
+            <a href="./index.html" class="header-list-link-el link">Studio</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="header-list-link-el link">
+              Portfolio
+            </a>
+          </li>
+          <li><a href="" class="header-list-link-el link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="header-address">
         <ul class="header-address-list list">
-          <li><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111" class="header-phone link">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="header-address-link link">
+              info@devstudio.com
+            </a>
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="header-address-link link">
+              +11 (000) 111-11-11
+            </a>
+          </li>
         </ul>
       </address>
     </header>
