--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </section>
 
       <section class="index-what-we">
-        <h2>What are we doing</h2>
+        <h2 class="index-what-we-title">What are we doing</h2>
         <ul class="list">
           <li>
             <img
