--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
       <address class="header-address">
         <ul class="header-address-list list">
           <li>
-            <a href="mailto:info@devstudio.com" class="header-address-link link">
+            <a
+              href="mailto:info@devstudio.com"
+              class="header-address-link link"
+            >
               info@devstudio.com
             </a>
           </li>
@@ -57,7 +60,7 @@
       </section>
 
       <section class="index-our-strength">
-        <h2 class="index-our-strength-title">WebStudio pluses</h2>
+        <h2 class="index-our-strength-title">WebStudio Pluses</h2>
         <ul class="list">
           <li>
             <h3 class="index-our-strength-list-title">Strategy</h3>
@@ -121,7 +124,7 @@
       </section>
 
       <section class="index-our-team">
-        <h2>Our Team</h2>
+        <h2 class="index-our-team-title">Our Team</h2>
         <ul class="list">
           <li class="index-our-team-list-el">
             <img
@@ -130,7 +133,7 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
+            <h3 class="index-our-team-list-title">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li class="index-our-team-list-el">
@@ -140,7 +143,7 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
+            <h3 class="index-our-team-list-title">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li class="index-our-team-list-el">
@@ -150,7 +153,7 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="index-our-team-list-title">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li class="index-our-team-list-el">
@@ -160,7 +163,7 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="index-our-team-list-title">Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
