--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,10 @@
       <address class="header-address">
         <ul class="header-address-list list">
           <li>
-            <a href="mailto:info@devstudio.com" class="header-address-link link">
+            <a
+              href="mailto:info@devstudio.com"
+              class="header-address-link link"
+            >
               info@devstudio.com
             </a>
           </li>
@@ -52,27 +55,42 @@
         <h2 class="portfolio-button-title">Portfolio Fiter</h2>
         <ul class="portfolio-button-list">
           <li>
-            <button type="button" class="portfolio-button-button portfolio-button-button-all">
+            <button
+              type="button"
+              class="portfolio-button-button portfolio-button-button-all"
+            >
               All
             </button>
           </li>
           <li>
-            <button type="button" class="portfolio-button-button portfolio-button-button-web">
+            <button
+              type="button"
+              class="portfolio-button-button portfolio-button-button-web"
+            >
               Web Site
             </button>
           </li>
           <li>
-            <button type="button" class="portfolio-button-button portfolio-button-button-app">
+            <button
+              type="button"
+              class="portfolio-button-button portfolio-button-button-app"
+            >
               App
             </button>
           </li>
           <li>
-            <button type="button" class="portfolio-button-button portfolio-button-button-design">
+            <button
+              type="button"
+              class="portfolio-button-button portfolio-button-button-design"
+            >
               Design
             </button>
           </li>
           <li>
-            <button type="button" class="portfolio-button-button portfolio-button-button-marketing">
+            <button
+              type="button"
+              class="portfolio-button-button portfolio-button-button-marketing"
+            >
               Marketing
             </button>
           </li>
