index 4th section

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               height="260"
             />
             <h3 class="index-our-team-list-title">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="index-our-team-p">Product Designer</p>
           </li>
           <li class="index-our-team-list-el">
             <img
@@ -144,7 +144,7 @@
               height="260"
             />
             <h3 class="index-our-team-list-title">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="index-our-team-p">Frontend Developer</p>
           </li>
           <li class="index-our-team-list-el">
             <img
@@ -154,7 +154,7 @@
               height="260"
             />
             <h3 class="index-our-team-list-title">Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="index-our-team-p">Marketing</p>
           </li>
           <li class="index-our-team-list-el">
             <img
@@ -164,7 +164,7 @@
               height="260"
             />
             <h3 class="index-our-team-list-title">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="index-our-team-p">UI Designer</p>
           </li>
         </ul>
       </section>
