--- a/portfolio.html
+++ b/portfolio.html
@@ -224,11 +224,11 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       <a href="./index.html" class="logo-footer link"
-        ><span class="logo-footer-web">Web</span>Studio</a
+        >Web<span class="logo-footer-studio">Studio</span></a
       >
-      <p>
+      <p class="footer-p">
         Increase the flow of customers and<br />sales for your business with
         digital<br />
         marketing & growth solutions.
