--- a/portfolio.html
+++ b/portfolio.html
@@ -52,8 +52,9 @@
 
     <main>
       <section class="portfolio-button">
+        <h1 class="portfolio-title">Portfolio</h1>
         <h2 class="portfolio-button-title">Portfolio Fiter</h2>
-        <ul class="portfolio-button-list">
+        <ul class="portfolio-button-list list">
           <li>
             <button
               type="button"
@@ -95,13 +96,10 @@
             </button>
           </li>
         </ul>
-      </section>
-
-      <section class="portfolio-elements">
         <h2 class="portfolio-elements-title">WebStudio portfolio</h2>
-        <ul class="portfolio-elements-list">
+        <ul class="portfolio-elements-list list">
           <li>
-            <ul class="portfolio-elements-list-list">
+            <ul class="portfolio-elements-list-list list">
               <li>
                 <a href="">
                   <img
@@ -141,7 +139,7 @@
             </ul>
           </li>
           <li>
-            <ul class="portfolio-elements-list-list">
+            <ul class="portfolio-elements-list-list list">
               <li>
                 <a href="">
                   <img
@@ -181,7 +179,7 @@
             </ul>
           </li>
           <li>
-            <ul class="portfolio-elements-list-list">
+            <ul class="portfolio-elements-list-list list">
               <li>
                 <a href="">
                   <img
