--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
       <section class="portfolio-button">
         <h1 class="portfolio-title">Portfolio</h1>
         <h2 class="portfolio-button-title">Portfolio Fiter</h2>
-        <ul class="portfolio-button-list list">
+        <ul class="list">
           <li>
             <button
               type="button"
@@ -97,9 +97,9 @@
           </li>
         </ul>
         <h2 class="portfolio-elements-title">WebStudio portfolio</h2>
-        <ul class="portfolio-elements-list list">
+        <ul class="list">
           <li>
-            <ul class="portfolio-elements-list-list list">
+            <ul class="list">
               <li>
                 <a href="">
                   <img
@@ -139,7 +139,7 @@
             </ul>
           </li>
           <li>
-            <ul class="portfolio-elements-list-list list">
+            <ul class="list">
               <li>
                 <a href="">
                   <img
@@ -179,7 +179,7 @@
             </ul>
           </li>
           <li>
-            <ul class="portfolio-elements-list-list list">
+            <ul class="list">
               <li>
                 <a href="">
                   <img
