css portfolio button

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
           <li>
             <button
               type="button"
-              class="portfolio-button-button portfolio-button-button-all"
+              class="portfolio-button-button"
             >
               All
             </button>
@@ -65,7 +65,7 @@
           <li>
             <button
               type="button"
-              class="portfolio-button-button portfolio-button-button-web"
+              class="portfolio-button-button"
             >
               Web Site
             </button>
@@ -73,7 +73,7 @@
           <li>
             <button
               type="button"
-              class="portfolio-button-button portfolio-button-button-app"
+              class="portfolio-button-button"
             >
               App
             </button>
@@ -81,7 +81,7 @@
           <li>
             <button
               type="button"
-              class="portfolio-button-button portfolio-button-button-design"
+              class="portfolio-button-button"
             >
               Design
             </button>
@@ -89,7 +89,7 @@
           <li>
             <button
               type="button"
-              class="portfolio-button-button portfolio-button-button-marketing"
+              class="portfolio-button-button"
             >
               Marketing
             </button>
