--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
           <li>
             <ul class="list">
               <li>
-                <a href="">
+                <a href="" class="portfolio-list-link link">
                   <img
                     src="./images/portfolio_photo/banking-app.jpg"
                     alt="screenshots of this application"
@@ -107,11 +107,11 @@
                     height="300"
                   />
                 </a>
-                <h3>Banking App Interface Concept</h3>
+                <h2>Banking App Interface Concept</h2>
                 <p>App</p>
               </li>
               <li>
-                <a href="">
+                <a href="" class="portfolio-list-link link">
                   <img
                     src="./images/portfolio_photo/cashless-payment.jpg"
                     alt="image of usage of this app"
@@ -119,11 +119,11 @@
                     height="300"
                   />
                 </a>
-                <h3>Cashless Payment</h3>
+                <h2>Cashless Payment</h2>
                 <p>Marketing</p>
               </li>
               <li>
-                <a href="">
+                <a href="" class="portfolio-list-link link">
                   <img
                     src="./images/portfolio_photo/meditaion-app.jpg"
                     alt="image of computer and smartphone with running application"
@@ -131,7 +131,7 @@
                     height="300"
                   />
                 </a>
-                <h3>Meditaion App</h3>
+                <h2>Meditaion App</h2>
                 <p>App</p>
               </li>
             </ul>
@@ -139,7 +139,7 @@
           <li>
             <ul class="list">
               <li>
-                <a href="">
+                <a href="" class="portfolio-list-link link">
                   <img
                     src="./images/portfolio_photo/taxi-service.jpg"
                     alt="photo of taxi driver in his car"
@@ -147,11 +147,11 @@
                     height="300"
                   />
                 </a>
-                <h3>Taxi Service</h3>
+                <h2>Taxi Service</h2>
                 <p>Marketing</p>
               </li>
               <li>
-                <a href="">
+                <a href="" class="portfolio-list-link link">
                   <img
                     src="./images/portfolio_photo/screen-illustrations.jpg"
                     alt="screenshots of application"
@@ -159,11 +159,11 @@
                     height="300"
                   />
                 </a>
-                <h3>Screen Illustrations</h3>
+                <h2>Screen Illustrations</h2>
                 <p>Design</p>
               </li>
               <li>
-                <a href="">
+                <a href="" class="portfolio-list-link link">
                   <img
                     src="./images/portfolio_photo/online-courses.jpg"
                     alt="photo of girl with headphones"
@@ -171,7 +171,7 @@
                     height="300"
                   />
                 </a>
-                <h3>Online Courses</h3>
+                <h2>Online Courses</h2>
                 <p>Marketing</p>
               </li>
             </ul>
@@ -179,7 +179,7 @@
           <li>
             <ul class="list">
               <li>
-                <a href="">
+                <a href="" class="portfolio-list-link link">
                   <img
                     src="./images/portfolio_photo/instagram-stories-concept.jpg"
                     alt="screenshot of application"
@@ -187,11 +187,11 @@
                     height="300"
                   />
                 </a>
-                <h3>Instagram Stories Concept</h3>
+                <h2>Instagram Stories Concept</h2>
                 <p>Design</p>
               </li>
               <li>
-                <a href="">
+                <a href="" class="portfolio-list-link link">
                   <img
                     src="./images/portfolio_photo/organic-food.jpg"
                     alt="photo of woman with groceries"
@@ -199,11 +199,11 @@
                     height="300"
                   />
                 </a>
-                <h3>Organic Food</h3>
+                <h2>Organic Food</h2>
                 <p>Web Site</p>
               </li>
               <li>
-                <a href="">
+                <a href="" class="portfolio-list-link link">
                   <img
                     src="./images/portfolio_photo/fresh-coffee.jpg"
                     alt="photo of barista with coffee"
@@ -211,7 +211,7 @@
                     height="300"
                   />
                 </a>
-                <h3>Fresh Coffee</h3>
+                <h2>Fresh Coffee</h2>
                 <p>Web Site</p>
               </li>
             </ul>
