--- a/portfolio.html
+++ b/portfolio.html
@@ -55,42 +55,23 @@
         <h1 class="portfolio-title">Portfolio</h1>
         <ul class="list">
           <li>
-            <button
-              type="button"
-              class="portfolio-button-button"
-            >
-              All
-            </button>
+            <button type="button" class="portfolio-button-button">All</button>
           </li>
           <li>
-            <button
-              type="button"
-              class="portfolio-button-button"
-            >
+            <button type="button" class="portfolio-button-button">
               Web Site
             </button>
           </li>
           <li>
-            <button
-              type="button"
-              class="portfolio-button-button"
-            >
-              App
-            </button>
+            <button type="button" class="portfolio-button-button">App</button>
           </li>
           <li>
-            <button
-              type="button"
-              class="portfolio-button-button"
-            >
+            <button type="button" class="portfolio-button-button">
               Design
             </button>
           </li>
           <li>
-            <button
-              type="button"
-              class="portfolio-button-button"
-            >
+            <button type="button" class="portfolio-button-button">
               Marketing
             </button>
           </li>
@@ -106,9 +87,9 @@
                     width="360"
                     height="300"
                   />
+                  <h2>Banking App Interface Concept</h2>
+                  <p>App</p>
                 </a>
-                <h2>Banking App Interface Concept</h2>
-                <p>App</p>
               </li>
               <li>
                 <a href="" class="portfolio-list-link link">
@@ -118,9 +99,9 @@
                     width="360"
                     height="300"
                   />
+                  <h2>Cashless Payment</h2>
+                  <p>Marketing</p>
                 </a>
-                <h2>Cashless Payment</h2>
-                <p>Marketing</p>
               </li>
               <li>
                 <a href="" class="portfolio-list-link link">
@@ -130,9 +111,9 @@
                     width="360"
                     height="300"
                   />
+                  <h2>Meditaion App</h2>
+                  <p>App</p>
                 </a>
-                <h2>Meditaion App</h2>
-                <p>App</p>
               </li>
             </ul>
           </li>
@@ -146,9 +127,9 @@
                     width="360"
                     height="300"
                   />
+                  <h2>Taxi Service</h2>
+                  <p>Marketing</p>
                 </a>
-                <h2>Taxi Service</h2>
-                <p>Marketing</p>
               </li>
               <li>
                 <a href="" class="portfolio-list-link link">
@@ -158,9 +139,9 @@
                     width="360"
                     height="300"
                   />
+                  <h2>Screen Illustrations</h2>
+                  <p>Design</p>
                 </a>
-                <h2>Screen Illustrations</h2>
-                <p>Design</p>
               </li>
               <li>
                 <a href="" class="portfolio-list-link link">
@@ -170,9 +151,9 @@
                     width="360"
                     height="300"
                   />
+                  <h2>Online Courses</h2>
+                  <p>Marketing</p>
                 </a>
-                <h2>Online Courses</h2>
-                <p>Marketing</p>
               </li>
             </ul>
           </li>
@@ -186,9 +167,9 @@
                     width="360"
                     height="300"
                   />
+                  <h2>Instagram Stories Concept</h2>
+                  <p>Design</p>
                 </a>
-                <h2>Instagram Stories Concept</h2>
-                <p>Design</p>
               </li>
               <li>
                 <a href="" class="portfolio-list-link link">
@@ -198,9 +179,9 @@
                     width="360"
                     height="300"
                   />
+                  <h2>Organic Food</h2>
+                  <p>Web Site</p>
                 </a>
-                <h2>Organic Food</h2>
-                <p>Web Site</p>
               </li>
               <li>
                 <a href="" class="portfolio-list-link link">
@@ -210,9 +191,9 @@
                     width="360"
                     height="300"
                   />
+                  <h2>Fresh Coffee</h2>
+                  <p>Web Site</p>
                 </a>
-                <h2>Fresh Coffee</h2>
-                <p>Web Site</p>
               </li>
             </ul>
           </li>
