--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
           <li>
             <ul class="list">
               <li>
-                <a href="" class="portfolio-list-link link">
+                <a href="" class="link">
                   <img
                     src="./images/portfolio_photo/banking-app.jpg"
                     alt="screenshots of this application"
@@ -92,7 +92,7 @@
                 </a>
               </li>
               <li>
-                <a href="" class="portfolio-list-link link">
+                <a href="" class="link">
                   <img
                     src="./images/portfolio_photo/cashless-payment.jpg"
                     alt="image of usage of this app"
@@ -104,7 +104,7 @@
                 </a>
               </li>
               <li>
-                <a href="" class="portfolio-list-link link">
+                <a href="" class="link">
                   <img
                     src="./images/portfolio_photo/meditaion-app.jpg"
                     alt="image of computer and smartphone with running application"
@@ -120,7 +120,7 @@
           <li>
             <ul class="list">
               <li>
-                <a href="" class="portfolio-list-link link">
+                <a href="" class="link">
                   <img
                     src="./images/portfolio_photo/taxi-service.jpg"
                     alt="photo of taxi driver in his car"
@@ -132,7 +132,7 @@
                 </a>
               </li>
               <li>
-                <a href="" class="portfolio-list-link link">
+                <a href="" class="link">
                   <img
                     src="./images/portfolio_photo/screen-illustrations.jpg"
                     alt="screenshots of application"
@@ -144,7 +144,7 @@
                 </a>
               </li>
               <li>
-                <a href="" class="portfolio-list-link link">
+                <a href="" class="link">
                   <img
                     src="./images/portfolio_photo/online-courses.jpg"
                     alt="photo of girl with headphones"
@@ -160,7 +160,7 @@
           <li>
             <ul class="list">
               <li>
-                <a href="" class="portfolio-list-link link">
+                <a href="" class="link">
                   <img
                     src="./images/portfolio_photo/instagram-stories-concept.jpg"
                     alt="screenshot of application"
@@ -172,7 +172,7 @@
                 </a>
               </li>
               <li>
-                <a href="" class="portfolio-list-link link">
+                <a href="" class="link">
                   <img
                     src="./images/portfolio_photo/organic-food.jpg"
                     alt="photo of woman with groceries"
@@ -184,7 +184,7 @@
                 </a>
               </li>
               <li>
-                <a href="" class="portfolio-list-link link">
+                <a href="" class="link">
                   <img
                     src="./images/portfolio_photo/fresh-coffee.jpg"
                     alt="photo of barista with coffee"
