--- a/portfolio.html
+++ b/portfolio.html
@@ -85,8 +85,8 @@
                 width="360"
                 height="300"
               />
-              <h2>Banking App Interface Concept</h2>
-              <p>App</p>
+              <h2 class="portfolio-list-title">Banking App Interface Concept</h2>
+              <p class="portfolio-list-text">App</p>
             </a>
           </li>
           <li>
@@ -97,8 +97,8 @@
                 width="360"
                 height="300"
               />
-              <h2>Cashless Payment</h2>
-              <p>Marketing</p>
+              <h2 class="portfolio-list-title">Cashless Payment</h2>
+              <p class="portfolio-list-text">Marketing</p>
             </a>
           </li>
           <li>
@@ -109,8 +109,8 @@
                 width="360"
                 height="300"
               />
-              <h2>Meditaion App</h2>
-              <p>App</p>
+              <h2 class="portfolio-list-title">Meditaion App</h2>
+              <p class="portfolio-list-text">App</p>
             </a>
           </li>
           <li>
@@ -121,8 +121,8 @@
                 width="360"
                 height="300"
               />
-              <h2>Taxi Service</h2>
-              <p>Marketing</p>
+              <h2 class="portfolio-list-title">Taxi Service</h2>
+              <p class="portfolio-list-text">Marketing</p>
             </a>
           </li>
           <li>
@@ -133,8 +133,8 @@
                 width="360"
                 height="300"
               />
-              <h2>Screen Illustrations</h2>
-              <p>Design</p>
+              <h2 class="portfolio-list-title">Screen Illustrations</h2>
+              <p class="portfolio-list-text">Design</p>
             </a>
           </li>
           <li>
@@ -145,8 +145,8 @@
                 width="360"
                 height="300"
               />
-              <h2>Online Courses</h2>
-              <p>Marketing</p>
+              <h2 class="portfolio-list-title">Online Courses</h2>
+              <p class="portfolio-list-text">Marketing</p>
             </a>
           </li>
           <li>
@@ -157,8 +157,8 @@
                 width="360"
                 height="300"
               />
-              <h2>Instagram Stories Concept</h2>
-              <p>Design</p>
+              <h2 class="portfolio-list-title">Instagram Stories Concept</h2>
+              <p class="portfolio-list-text">Design</p>
             </a>
           </li>
           <li>
@@ -169,8 +169,8 @@
                 width="360"
                 height="300"
               />
-              <h2>Organic Food</h2>
-              <p>Web Site</p>
+              <h2 class="portfolio-list-title">Organic Food</h2>
+              <p class="portfolio-list-text">Web Site</p>
             </a>
           </li>
           <li>
@@ -181,8 +181,8 @@
                 width="360"
                 height="300"
               />
-              <h2>Fresh Coffee</h2>
-              <p>Web Site</p>
+              <h2 class="portfolio-list-title">Fresh Coffee</h2>
+              <p class="portfolio-list-text">Web Site</p>
             </a>
           </li>
         </ul>
