--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="header">
       <nav>
         <a href="./index.html" class="logo-header link">
           Web<span class="logo-header-studio">Studio</span>
@@ -53,8 +53,7 @@
     <main>
       <section class="index-order-services">
         <h1 class="index-order-services-title">
-          Effective Solutions<br />
-          for Your Business
+          Effective Solutions for Your Business
         </h1>
         <button class="index-order-services-button">Order Service</button>
       </section>
@@ -175,8 +174,7 @@
         >Web<span class="logo-footer-studio">Studio</span></a
       >
       <p class="footer-p">
-        Increase the flow of customers and<br />sales for your business with
-        digital<br />
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
