--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,9 @@
                 width="360"
                 height="300"
               />
-              <h2 class="portfolio-list-title">Banking App Interface Concept</h2>
+              <h2 class="portfolio-list-title">
+                Banking App Interface Concept
+              </h2>
               <p class="portfolio-list-text">App</p>
             </a>
           </li>
@@ -194,8 +196,7 @@
         >Web<span class="logo-footer-studio">Studio</span></a
       >
       <p class="footer-p">
-        Increase the flow of customers and<br />sales for your business with
-        digital<br />
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
